--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,19 @@
             <version>7.10.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- JSON Simple -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
+
+
+
+
 
 
 </project>
